--- a/style.css
+++ b/style.css
@@ -88,9 +88,10 @@ header {
 
 #logo {
     position: absolute;
-    width: 60px;
+    width: 80px;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 2;
 }
 
 #home {
@@ -163,7 +164,7 @@ header {
 
 
 #fordele {
-    list-style-image: url();
+    list-style-image: url(potelist.png);
     margin-left: 2em;
 }
 
